--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Bruin Sports Analytics
 author: Bruin Sports Analytics
-twitter: bruinsportsanalytics
+twitter: bruinanalytics
 
 permalink: "/:title"
 
