--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,8 @@ paginate_path: "blog/:num"
 plugins:
   - jekyll-paginate
 
+alex_veroulis:
+  name: Alex Veroulis
+  web: http://www.bruinsportsanalytics.com
+
 excerpt_separator: <!-- end excerpt here -->
