finished author links

--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -37,3 +37,33 @@ don_vu:
     name: Don Vu
     web: http://www.bruinsportsanalytics.com/authors/donvu.html
     bio:
+
+stephen_chen:
+    name: Stephen Chen
+    web: http://www.bruinsportsanalytics.com/authors/stephenchen.html
+    bio:
+
+albert_pan:
+    name: Albert Pan
+    web: http://www.bruinsportsanalytics.com/authors/albertpan.html
+    bio:
+
+ben_messinger:
+    name: Ben Messinger
+    web: http://www.bruinsportsanalytics.com/authors/benmessinger.html
+    bio: Born and raised in Porter Ranch, California, Ben has been obsessed with playing, watching, and analyzing basketball for as long as he can remember. After winning a state championship at Sierra Canyon in 2015, Ben began college at UCLA where he studies Political Science with a focus on International Relations. Ben is also passionate about his basketball-centered nonprofit, Hoops with Heart.
+
+kathir_ilango:
+    name: Kathir Ilango
+    web: http://www.bruinsportsanalytics.com/authors/kathirilango.html
+    bio: I'm Kathir and I'm a first year Computer Science and Engineering major at UCLA. I've lived in the Bay Area my whole life and I'm a massive 49ers fan. I played a lot of soccer and tennis growing up. The sports that I love to follow closely and discuss are football, basketball, tennis, boxing, and soccer.
+
+kevin_hahn:
+    name: Kevin Hahn
+    web: http://www.bruinsportsanalytics.com/authors/kevinhahn.html
+    bio: My name is Kevin Hahn, and I'm a first-year Math/Econ major and Statistics minor. My favorite sports are baseball, basketball, and tennis. Ideally, my dream job would be working for the Los Angeles Dodgers in their player development development, ultimately helping the team bring a World Series championship back to LA.
+
+subash_raman:
+    name: Subash Sundar Raman
+    web: http://www.bruinsportsanalytics.com/authors/subashraman.html
+    bio: Hi, I'm Subash, a first-year Mathematics of Computation major. I enjoy watching and playing soccer. I closely follow the English Premier League, and am an avid supporter of Manchester City. Lately, I have also been watching basketball, specifically the UCLA men’s team. I’m not sure what my dream job is yet but I’d like for it to be one where I have the freedom to explore and analyze any topic that I am interested in.
