--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -1,69 +1,69 @@
 alex_veroulis:
     name: Alex Veroulis
-    web: http://www.bruinsportsanalytics.com/authors/alexveroulis.html
+    web: http://www.bruinsportsanalytics.com/alexveroulis
     bio: I'm Alex Veroulis, a first-year student with the academic standing of a sophomore for the 2017-2018 academic year. My major is statistics, as I have an affinity for numbers, and AP Stats was by far the best class I took in high school. Also, I've engaged in sports my entire life; some of my favorites to play are water polo, racquetball, and golf. In addition, I follow football, basketball, hockey, soccer, and baseball, so I would love to become a data scientist in the sports world one day.
 
 konner_macias:
     name: Konner Macias
-    web: http://www.bruinsportsanalytics.com/authors/konnermacias.html
+    web: http://www.bruinsportsanalytics.com/konnermacias
     bio: I’m a third year Mathematics of Computation major and a Statistics minor at UCLA. I’m from the Sacramento Area and have grown up with sports my whole life. I mainly played junior competitive tennis and got good enough to receive some DII scholarships, but school will always come first! I am now the Team Captain of UCLA’s Competitive Club Tennis Team, and with a love for data science, I decided to combine my passions by creating Bruin Sports Analytics! If you see me around town, please make sure to say hi!
 
 joey_maurer:
     name: Joey Maurer
-    web: http://www.bruinsportsanalytics.com/authors/joeymaurer.html
+    web: http://www.bruinsportsanalytics.com/joeymaurer
     bio: I am a second year Statistics major from Temecula, CA. I grew up playing and watching hockey; my favorite team is the San Jose Sharks. I also enjoy most of the other major sports, as well as college soccer and gymnastics. My additional hobbies include astronomy, SCUBA diving, and fish/reptile breeding. I hope to pursue a career in biostatistics or sports analytics, and am thrilled to be at a school like UCLA that is a powerhouse in academics and athletics.
 
 ronaq_virdi:
     name: Ronaq Virdi
-    web: http://www.bruinsportsanalytics.com/authors/ronaqvirdi.html
+    web: http://www.bruinsportsanalytics.com/ronaqvirdi
     bio: Hi, I’m Ronaq, a fourth year Computer Science major. My favorite sports are basketball and football and more recently I started playing golf. I have been a lifelong Lakers fan and my dream job is to one day be the GM of an NBA team.
 
 salil_akundi:
     name: Salil Akundi
-    web: http://www.bruinsportsanalytics.com/authors/salilakundi.html
+    web: http://www.bruinsportsanalytics.com/salilakundi
     bio: I'm Salil and I'm a first year Computer Science and Engineering major. In addition I'm a pianist and would like to pursue my interest in classical music at a professional level. I'm also an avid soccer and tennis fan, and derive as much joy analyzing games tactically as when Liverpool FC win!
 
 zane_winston:
     name: Zane Winston
-    web: http://www.bruinsportsanalytics.com/authors/zanewinston.html
+    web: http://www.bruinsportsanalytics.com/zanewinston
     bio: Zane is a first year-business economics student at UCLA. He has been interested in sports since a young age, and loves writing about basketball.
 
 nikhil_sharma:
     name: Nikhil Sharma
-    web: http://www.bruinsportsanalytics.com/authors/nikhilsharma.html
+    web: http://www.bruinsportsanalytics.com/nikhilsharma
     bio: I am Nikhil Sharma, a second-year statistics major. I’m a huge basketball fan and love my Lakers. One day, I hope to become a Big Baller Brand Ambassador.
 
 don_vu:
     name: Don Vu
-    web: http://www.bruinsportsanalytics.com/authors/donvu.html
+    web: http://www.bruinsportsanalytics.com/donvu
     bio:
 
 stephen_chen:
     name: Stephen Chen
-    web: http://www.bruinsportsanalytics.com/authors/stephenchen.html
+    web: http://www.bruinsportsanalytics.com/stephenchen
     bio:
 
 albert_pan:
     name: Albert Pan
-    web: http://www.bruinsportsanalytics.com/authors/albertpan.html
+    web: http://www.bruinsportsanalytics.com/albertpan
     bio:
 
 ben_messinger:
     name: Ben Messinger
-    web: http://www.bruinsportsanalytics.com/authors/benmessinger.html
+    web: http://www.bruinsportsanalytics.com/benmessinger
     bio: Born and raised in Porter Ranch, California, Ben has been obsessed with playing, watching, and analyzing basketball for as long as he can remember. After winning a state championship at Sierra Canyon in 2015, Ben began college at UCLA where he studies Political Science with a focus on International Relations. Ben is also passionate about his basketball-centered nonprofit, Hoops with Heart.
 
 kathir_ilango:
     name: Kathir Ilango
-    web: http://www.bruinsportsanalytics.com/authors/kathirilango.html
+    web: http://www.bruinsportsanalytics.com/kathirilango
     bio: I'm Kathir and I'm a first year Computer Science and Engineering major at UCLA. I've lived in the Bay Area my whole life and I'm a massive 49ers fan. I played a lot of soccer and tennis growing up. The sports that I love to follow closely and discuss are football, basketball, tennis, boxing, and soccer.
 
 kevin_hahn:
     name: Kevin Hahn
-    web: http://www.bruinsportsanalytics.com/authors/kevinhahn.html
+    web: http://www.bruinsportsanalytics.com/kevinhahn
     bio: My name is Kevin Hahn, and I'm a first-year Math/Econ major and Statistics minor. My favorite sports are baseball, basketball, and tennis. Ideally, my dream job would be working for the Los Angeles Dodgers in their player development development, ultimately helping the team bring a World Series championship back to LA.
 
 subash_raman:
     name: Subash Sundar Raman
-    web: http://www.bruinsportsanalytics.com/authors/subashraman.html
+    web: http://www.bruinsportsanalytics.com/subashraman
     bio: Hi, I'm Subash, a first-year Mathematics of Computation major. I enjoy watching and playing soccer. I closely follow the English Premier League, and am an avid supporter of Manchester City. Lately, I have also been watching basketball, specifically the UCLA men’s team. I’m not sure what my dream job is yet but I’d like for it to be one where I have the freedom to explore and analyze any topic that I am interested in.
