blog and speakers

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,15 @@
-- title: Home
-  url: /index.html
-  permalink: /
-- title: Officers
-  url: /officers/index.html
-  permalink: /officers/
+- title: Blog
+  url: /blog/index.html
+  permalink: /blog/
 - title: Research
   url: /research/index.html
+  permalink: /research/
 - title: About
-  url: /about.html
-
+  url: /about/index.html
+  permalink: /about/
+  sublinks:
+    - title: Officers
+      url: /officers/index.html
+    - title: separator
+    - title: Speakers
+      url: /speakers/index.html
