--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -67,3 +67,8 @@ subash_raman:
     name: Subash Sundar Raman
     web: http://www.bruinsportsanalytics.com/subashraman
     bio: Hi, I'm Subash, a first-year Mathematics of Computation major. I enjoy watching and playing soccer. I closely follow the English Premier League, and am an avid supporter of Manchester City. Lately, I have also been watching basketball, specifically the UCLA men’s team. I’m not sure what my dream job is yet but I’d like for it to be one where I have the freedom to explore and analyze any topic that I am interested in.
+
+qijing_yap:
+    name: Qi Jing Yap
+    web: http://www.bruinsportsanalytics.com/qijingyap
+    bio:
