--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -1,4 +1,4 @@
-chad_schimozaki: {bio: '', name: Chad Schimozaki, web: 'http://www.bruinsportsanalytics.com/chadschimozaki'}
+chad_shimozaki: {bio: '', name: Chad Shimozaki, web: 'http://www.bruinsportsanalytics.com/chadshimozaki'}
 albert_pan: {bio: null, name: Albert Pan, web: 'http://www.bruinsportsanalytics.com/albertpan'}
 alex_veroulis: {bio: 'I''m Alex Veroulis, a first-year student with the academic standing
     of a sophomore for the 2017-2018 academic year. My major is statistics, as I have
