--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -1,4 +1,4 @@
-joe_dunham: {bio: '', name: Joe Dunham, web: 'http://www.bruinsportsanalytics.com/joedunham'}
+anirudh_mani: {bio: '', name: Anirudh Mani, web: 'http://www.bruinsportsanalytics.com/anirudhmani'}
 albert_pan: {bio: null, name: Albert Pan, web: 'http://www.bruinsportsanalytics.com/albertpan'}
 alex_veroulis: {bio: 'I''m Alex Veroulis, a first-year student with the academic standing
     of a sophomore for the 2017-2018 academic year. My major is statistics, as I have
@@ -15,6 +15,7 @@ ben_messinger: {bio: 'Born and raised in Porter Ranch, California, Ben has been 
   name: Ben Messinger, web: 'http://www.bruinsportsanalytics.com/benmessinger'}
 chad_shimozaki: {bio: '', name: Chad Shimozaki, web: 'http://www.bruinsportsanalytics.com/chadshimozaki'}
 don_vu: {bio: null, name: Don Vu, web: 'http://www.bruinsportsanalytics.com/donvu'}
+joe_dunham: {bio: '', name: Joe Dunham, web: 'http://www.bruinsportsanalytics.com/joedunham'}
 joey_maurer: {bio: 'I am a second year Statistics major from Temecula, CA. I grew
     up playing and watching hockey; my favorite team is the San Jose Sharks. I also
     enjoy most of the other major sports, as well as college soccer and gymnastics.
