add summer ball

--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -1,4 +1,4 @@
-justin_yee: {bio: '', name: Justin Yee, web: 'http://www.bruinsportsanalytics.com/justinyee'}
+haley_rao: {bio: '', name: Haley Rao, web: 'http://www.bruinsportsanalytics.com/haleyrao'}
 albert_pan: {bio: null, name: Albert Pan, web: 'http://www.bruinsportsanalytics.com/albertpan'}
 alex_veroulis: {bio: 'I''m Alex Veroulis, a first-year student with the academic standing
     of a sophomore for the 2017-2018 academic year. My major is statistics, as I have
@@ -26,6 +26,7 @@ joey_maurer: {bio: 'I am a third year Statistics major from Temecula, CA. I grew
     I hope to pursue a career in biostatistics or sports analytics, and am thrilled
     to be at a school like UCLA that is a powerhouse in academics and athletics.',
   name: Joey Maurer, web: 'http://www.bruinsportsanalytics.com/joeymaurer'}
+justin_yee: {bio: '', name: Justin Yee, web: 'http://www.bruinsportsanalytics.com/justinyee'}
 kathir_ilango: {bio: 'I''m Kathir and I''m a first year Computer Science and Engineering
     major at UCLA. I''ve lived in the Bay Area my whole life and I''m a massive 49ers
     fan. I played a lot of soccer and tennis growing up. The sports that I love to
