--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -1,4 +1,4 @@
-haley_rao: {bio: '', name: Haley Rao, web: 'http://www.bruinsportsanalytics.com/haleyrao'}
+arman_abrishamchian: {bio: '', name: Arman Abrishamchian, web: 'http://www.bruinsportsanalytics.com/armanabrishamchian'}
 albert_pan: {bio: null, name: Albert Pan, web: 'http://www.bruinsportsanalytics.com/albertpan'}
 alex_veroulis: {bio: 'I''m Alex Veroulis, a first-year student with the academic standing
     of a sophomore for the 2017-2018 academic year. My major is statistics, as I have
@@ -17,6 +17,7 @@ ben_messinger: {bio: 'Born and raised in Porter Ranch, California, Ben has been 
 chad_shimozaki: {bio: '', name: Chad Shimozaki, web: 'http://www.bruinsportsanalytics.com/chadshimozaki'}
 don_vu: {bio: null, name: Don Vu, web: 'http://www.bruinsportsanalytics.com/donvu'}
 gautham_pasupathy: {bio: '', name: Gautham Pasupathy, web: 'http://www.bruinsportsanalytics.com/gauthampasupathy'}
+haley_rao: {bio: '', name: Haley Rao, web: 'http://www.bruinsportsanalytics.com/haleyrao'}
 joe_dunham: {bio: '', name: Joe Dunham, web: 'http://www.bruinsportsanalytics.com/joedunham'}
 joey_maurer: {bio: 'I am a third year Statistics major from Temecula, CA. I grew up
     playing and watching hockey; my favorite team is the San Jose Sharks. I also enjoy
