add uefa article

--- a/_data/authors.yaml
+++ b/_data/authors.yaml
@@ -1,4 +1,4 @@
-arman_abrishamchian: {bio: '', name: Arman Abrishamchian, web: 'http://www.bruinsportsanalytics.com/armanabrishamchian'}
+faraz_murshed: {bio: '', name: Faraz Murshed, web: 'http://www.bruinsportsanalytics.com/farazmurshed'}
 albert_pan: {bio: null, name: Albert Pan, web: 'http://www.bruinsportsanalytics.com/albertpan'}
 alex_veroulis: {bio: 'I''m Alex Veroulis, a first-year student with the academic standing
     of a sophomore for the 2017-2018 academic year. My major is statistics, as I have
@@ -8,6 +8,7 @@ alex_veroulis: {bio: 'I''m Alex Veroulis, a first-year student with the academic
     hockey, soccer, and baseball, so I would love to become a data scientist in the
     sports world one day.', name: Alex Veroulis, web: 'http://www.bruinsportsanalytics.com/alexveroulis'}
 anirudh_mani: {bio: '', name: Anirudh Mani, web: 'http://www.bruinsportsanalytics.com/anirudhmani'}
+arman_abrishamchian: {bio: '', name: Arman Abrishamchian, web: 'http://www.bruinsportsanalytics.com/armanabrishamchian'}
 ben_messinger: {bio: 'Born and raised in Porter Ranch, California, Ben has been obsessed
     with playing, watching, and analyzing basketball for as long as he can remember.
     After winning a state championship at Sierra Canyon in 2015, Ben began college
